project/todo_project/manifests/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: project
  name: todofront-dep
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: todofront
  template:
    metadata:
      labels:
        app: todofront
    spec:
      containers:
        - name: todofront
          image: PROJECT/FRONT-IMAGE
          resources:
            limits:
              cpu: "50m"
              memory: "100Mi"
