project/todo_project/manifests/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todoserver-svc
spec:
  type: NodePort
  selector: 
    app: todoserver
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
