project/todo_project/manifests/nodeport_service.yml
apiVersion: v1 
kind: Service
metadata:
  namespace: project
  name: todoserver-svc
spec:
  type: NodePort
  selector:
    app: todoserver
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3001
