project/todo_project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: todo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todoserver-svc
            port: 
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: todofront-svc
            port: 
              number: 2343
